fix test run on java24