@@ -187,6 +187,17 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.1</version> <!-- Or latest stable version -->
 			</plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <configuration>
+                            <argLine>
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
 		</plugins>
 	</build>
 
